optimizations and added accessibilty specifics added

--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,7 @@
     <link href=”https://fonts.googleapis.com/icon?family=Material+Icons”
     rel=”stylesheet”>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
+    <meta name="description" content="I am Abhishek Jagushte, currently Software Engineer at Zeus Systems Pvt. Ltd. Check out my Portfolio! I have listed all my project and professional experiences. Feel free to contact me on any of my social media handles">
   </head>
   <body>
     <app-root></app-root>
